[package]
name = "elrond-growth-rust"
description = "Rust wrapper for Elrond Growth Api"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }