[package]
name = "elrond-growth-rust"
description = "Rust wrapper for Elrond Growth Api"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }